# 360ghar-backend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  README.md  alembic.ini  docker-compose.yml  flutter_api_docs.md  load_sample_data.py  load_sample_data_simple.py  pyproject.toml  quick_data_load.py  requirements.txt  run.py  server_err.txt  server_out.txt  server_stderr.txt  server_stdout.txt  setup_test_db.py
.cursor/rules/: 01-project-overview.mdc  02-api-conventions.mdc  03-auth-and-security.mdc  04-repos-services.mdc  05-caching-and-performance.mdc  06-endpoint-examples.mdc
.github/workflows/: tests.yml
.wiki/: .wiki-meta.json  Home.md  _Footer.md  _Sidebar.md  deployment.md
.wiki/api/: index.md
.wiki/background/: index.md
.wiki/features/: flatmates.md
.wiki/how-to-contribute/: index.md  patterns-and-conventions.md  testing.md  tooling.md
.wiki/overview/: getting-started.md
.wiki/primitives/: agent.md  property.md
.wiki/reference/: configuration.md
.wiki/video/: package.json
alembic/: env.py
alembic/versions/: a408bbf6e5fd_initial_schema_with_supabase_auth_.py  supabase_auth_migration.py
app/: factory.py  main.py
app/api/: deeplinks.py  share.py
app/api/api_v1/: api.py
app/core/: auth.py  cache.py  config.py  database.py  db_resilience.py  exceptions.py  http.py  logging.py  security.py  sse.py  supabase_client.py  websocket.py
app/db/: base.py  types.py
app/infrastructure/: errors.py  lifespan.py  mcp.py  middleware.py  routing.py
app/mcp/: admin_server.py  apps_sdk.py  auth_provider.py  errors.py  logging_filters.py  user_server.py  utils.py
app/middleware/: cache_control.py  rate_limit.py  security.py  trailing_slash.py
app/models/: __init__.py  agents.py  ai_conversations.py  blogs.py  booking.py  bookings.py  conversations.py  core.py  data_hub.py  enums.py  location.py  models.py  pm_documents.py  pm_finance.py  pm_inspections.py  pm_leases.py  pm_maintenance.py  pm_tenants.py  properties.py  property.py  social.py  tours.py  user.py  user_interaction.py  users.py  visit.py
app/repositories/: agent.py  base.py  booking.py  property.py  property_query_builder.py  property_repository.py  user.py  user_interaction.py  visit.py
app/schemas/: __init__.py  agent.py  ai_agent.py  amenity.py  blog.py  booking.py  common.py  core.py  custom_domain.py  data_hub.py  deeplinks.py  flatmates.py  flatmates_admin.py  location.py  pagination.py  pm_application.py  pm_dashboard.py  pm_document.py  pm_inspection.py  pm_lease.py  pm_maintenance.py  pm_property.py  pm_rent.py  pm_report.py  pm_tenant.py  property.py  storage.py  tour.py  user.py  visit.py
app/services/: agent.py  analytics.py  blog.py  blog_auto_publish.py  blog_auto_publish_scheduler.py  booking.py  core.py  custom_domain.py  data_hub_scheduler.py  email.py  image_processing.py  location.py  notification_dispatcher.py  notification_scheduler.py  oauth_token_store.py  payments.py  pm_assignments.py  pm_authz.py  pm_dashboard.py  pm_inspections.py  pm_leases.py  pm_maintenance.py  pm_properties.py  pm_rent.py  pm_reports.py  pm_tenants.py  property.py  push_notification.py  sms.py  storage.py  storage_paths.py  swipe.py  tour.py  tour_ai.py  user.py  vector_sync_scheduler.py  visit.py
app/utils/: distance.py  geo.py  validators.py
app/vector/: backfill.py  compose.py  embedding_client.py  store.py  sync.py
deploy/deeplinks/: Caddyfile.example  README.md  cloudflare.md  netlify-_redirects.example  nginx.conf.example
docs/: 360Ghar Real Estate Platform API.postman_collection.json  MCP_RCA_v2.md  chatgpt-mcp-integration-guide.md  deep-linking-deployment-checklist.md  deep-linking-production-readiness.md  deep-linking.md  property-intake-form.md  repo-contract.json
docs/adrs/: 001-domain-module-structure.md  002-repository-protocol-interfaces.md  003-event-driven-side-effects.md  004-external-service-adapters.md
docs/postman/: admin-dashboard-collection.json  postman-collection.json  postman-environment.json
populate_data/: backfill_locations.py  load_comprehensive_data.py
populate_data/data/: pm_data.json
populate_data/data_populators/: agent_populator.py  base.py  pm_data_populator.py  property_populator.py  user_populator.py
populate_data/scripts/: seed_pm_data.py  seed_pm_data_api.py
scripts/: bake_tour_spatial.py  blog_image_acquisition.py  seed_pm_data.py  seed_pm_data_api.py  validate_docs_contracts.py  verify_pm_data.py
seed_data/: 01_load_all.py  fix_property_images.py  shared.py
seed_data/generators/: 01_generate_seed_data.py  02_generate_activity.py
seed_data/loaders/: 01_base.py  02_hardcoded_loader.py  03_seed_loader.py  05_media_loader.py
supabase/migrations/: 001_floor_plans.sql  20250815000001_initial_schema.sql  20250815000002_indexes_and_constraints.sql  20250815000003_functions_and_triggers.sql  20250815000004_permissions_and_data.sql  20250816000001_fix_users_fkey.sql  20260328000000_create_data_hub_tables.sql  20260509000000_add_social_enum_constraints.sql  (+7 more)
tests/: conftest.py  test_auth_dependencies.py  test_base_repository.py  test_cache_manager.py  test_enums.py  test_exceptions.py  test_factory.py  test_middlewares.py  test_property_repository.py
tools/: test_mcp_tools.py  test_rest_api.py
(+238 files in other folders)
