[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["supabase*", "populate_data*", "seed_data*", "tests*"]

[project]
name = "ghar360-backend"
version = "1.0.0"
description = "360Ghar Real Estate Platform Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "redis>=5.0,<8",
    "supabase>=2.29.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "geoalchemy2>=0.19.0",
    "bleach>=6.3.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "psycopg[binary]>=3.3.4",
    "email-validator>=2.3.0",
    "fastmcp>=3.2.4",
    "websockets>=15.0,<16",
    "google-auth>=2.50.0",
    "APScheduler>=3.10.4,<4",
    "google-genai>=1.64.0",
    "pgvector>=0.4.2",
    "Pillow>=12.2.0",
    "tenacity>=9.1.4",
    "qrcode[pil]>=8.2",
    "dnspython>=2.8.0",
    "PyYAML>=6.0.3",
    "pydantic-ai-slim[openai,fastmcp,retries]>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "pdfplumber>=0.11.9",
    "cloudinary>=1.44.2",
    "PyJWT[crypto]>=2.9.0",
    "razorpay>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "respx>=0.23.1",
    "freezegun>=1.5.5",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "playwright>=1.59.0",
    "fastapi-debug-toolbar>=0.6.3",
    "watchfiles",
    "aiosqlite",
    "fastapi-cli>=0.0.24",
    "hypercorn>=0.18.0",
    "PyJWT>=2.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests with real database",
    "api: API endpoint tests",
    "mcp: MCP server tests",
    "e2e: End-to-end flow tests",
    "external: Tests requiring external services (skip by default)",
    "postgis: Tests requiring PostGIS extension",
    "slow: Slow tests that can be skipped in quick runs",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    # Entry-points / app wiring
    "app/__init__.py",
    "app/main.py",
    "app/factory.py",
    "*/migrations/*",
    "*/__pycache__/*",

    # Infrastructure — lifespan, scheduler setup, routing wiring
    "app/infrastructure/lifespan.py",
    "app/infrastructure/scheduler.py",
    "app/infrastructure/mcp.py",
    "app/infrastructure/middleware.py",
    "app/infrastructure/routing.py",

    # External-service clients (email, SMS, push, OAuth, Cloudinary, Razorpay)
    "app/services/email.py",
    "app/services/sms.py",
    "app/services/push_notification.py",
    "app/services/payments.py",
    "app/services/oauth_token_store.py",
    "app/services/cloudinary/*",
    "app/services/storage/*",
    "app/services/image_processing.py",

    # Schedulers / background jobs
    "app/services/blog_auto_publish_scheduler.py",
    "app/services/notification_scheduler.py",
    "app/services/data_hub_scheduler.py",
    "app/services/vector_sync_scheduler.py",
    "app/services/media/*",

    # Data-hub scrapers (network-bound, integration-only)
    "app/services/data_hub/*",

    # Blog auto-publish pipeline (LLM + external APIs)
    "app/services/blog_auto_publish.py",
    "app/services/blog_service/*",

    # Vector / embedding pipeline (external ML service)
    "app/vector/*",

    # AI providers (external API calls)
    "app/services/ai/providers/*",
    "app/services/ai/image_gen/*",
    "app/services/ai/vastu/*",
    "app/services/tour_ai/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
# fail_under is intentionally absent here.
# The 90% threshold is enforced exclusively by the coverage-check job
# (uv run coverage report --fail-under=90) after combining all shards,
# so that per-shard runs measuring ~33% of the codebase do not fail.

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
